# SmartAlloc

./: LICENSE  README.md
src/: CMakeLists.txt
src/common/: constants.h
src/core/: SmartAlloc.cpp
src/include/: SmartAlloc.h
src/test/: test1.cpp
